--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -63,7 +63,9 @@
       New
     </button>
     <div id="floatingButtonDropdown" class="dropdown-menu">
-      <a class="dropdown-item" href="" data-toggle="modal" data-target="#uploadModal">Upload</a>
+      <a class="dropdown-item" data-toggle="modal" data-target="#uploadModal">Upload</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" data-toggle="modal" data-target="#createTxtModal">Create text file</a>
       <a *ngIf="currentFolderId === -1" class="dropdown-item" href="" data-toggle="modal" data-target="#createFolderModal">Create Folder</a>
     </div>
   </div>
