--- a/src/angular/cooldrive/src/app/components/files/files.component.css
+++ b/src/angular/cooldrive/src/app/components/files/files.component.css
@@ -22,6 +22,17 @@
   width: 110px;
 }
 
+.input-group-addon.createTxtModal{
+  width: 110px;
+}
+
+.input-group-addon.createTxtModal.content{
+  border-right-color: rgb(204, 204, 204);
+  border-right-style: solid;
+  border-right-width: 1px;
+  border-bottom-width: 0px;
+}
+
 .modal-content{
   margin-top: 190px;
 }
