--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -47,7 +47,7 @@
         </a>
         <!-- USER DROPDOWN MENU ITEMS -->
         <div id="navbar-dropdown" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="" (click)="logout()">Log Out</a>
+          <a class="dropdown-item" (click)="logout()">Log Out</a>
         </div>
       </li>
     </ul>
