--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -172,12 +172,12 @@
           </div>
           <div class="input-group">
             <span class="input-group-addon createTxtModal">Title*</span>
-            <input type="text" class="form-control" aria-describedby="basic-addon1" (change)="enableCreateFolderBtn()" [(ngModel)]="newFolderName">
+            <input type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="newTxtTitle">
           </div>
           <div class="form-group">
             <br>
             <span class="input-group-addon createTxtModal content">Content</span>
-            <textarea class="form-control" id="Textarea" rows="3" [(ngModel)]="newFolderLabel"></textarea>
+            <textarea class="form-control" id="Textarea" rows="3" [(ngModel)]="newTxtContent"></textarea>
           </div>
 
         </div>
