--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -196,21 +196,14 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Text File</h4>
+          <h4 class="modal-title">{{editTxtTitle}}</h4>
         </div>
         <div class="modal-body">
           <div *ngIf="false" id="editTxtInfo" class="alert alert-success" role="alert">
           </div>
-          <div class="input-group">
-            <span class="input-group-addon createTxtModal">Title</span>
-            <input type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="editTxtTitle">
-          </div>
           <div class="form-group">
-            <br>
-            <span class="input-group-addon createTxtModal content">Content</span>
             <textarea class="form-control" id="editTextarea" rows="3" [(ngModel)]="editTxtContent"></textarea>
           </div>
-
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
