ableToModify refactored to ReadOnly

--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -252,12 +252,12 @@
 
         <div class="custom-controls-stacked">
           <label class="custom-control custom-radio">
-            <input id="radioStacked1" name="radio-stacked" type="radio" class="custom-control-input" [(ngModel)]="shareAbleToModify" value="false">
+            <input id="radioStacked1" name="radio-stacked" type="radio" class="custom-control-input" [(ngModel)]="shareReadOnly" value="false">
             <span class="custom-control-indicator"></span>
             <span class="custom-control-description">Download only</span>
           </label>
           <label class="custom-control custom-radio">
-            <input id="radioStacked2" name="radio-stacked" type="radio" class="custom-control-input" [(ngModel)]="shareAbleToModify" value="true">
+            <input id="radioStacked2" name="radio-stacked" type="radio" class="custom-control-input" [(ngModel)]="shareReadOnly" value="true">
             <span class="custom-control-indicator"></span>
             <span class="custom-control-description">Full Access</span>
           </label>
