--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -69,6 +69,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/dashboard/checkout/9">Checkout</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/dashboard/maintenance">Maintenance</a>
+        </li>
       </ul>
     </nav>
 
