--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -61,13 +61,16 @@
     <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="/dashboard/files">Files <span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="/dashboard/files">Files</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/dashboard/storage">Buy more storage</a>
+          <a class="nav-link" href="/dashboard/files">Share controll</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/dashboard/checkout/9">Checkout</a>
+          <a class="nav-link" href="/dashboard/files">Files shared with me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/dashboard/storage">Buy extra storage</a>
         </li>
       </ul>
     </nav>
