--- a/src/angular/cooldrive/src/app/components/shared-with-me/shared-with-me.component.html
+++ b/src/angular/cooldrive/src/app/components/shared-with-me/shared-with-me.component.html
@@ -1,3 +1,49 @@
-<p>
-  shared-with-me works!
-</p>
+<h1>{{currentFolderName}}</h1>
+
+<div class="table-responsive">
+  <table class="table table-striped">
+    <thead>
+    <tr>
+      <th>Filename</th>
+      <th>Extension</th>
+      <th>Size</th>
+      <th>Upload Date</th>
+      <th>Label</th>
+      <th>Functions</th>
+    </tr>
+    </thead>
+
+    <tbody id="FileListDisplay">
+    <tr *ngFor="let file of filteredFiles">
+      <td>
+        <div *ngIf="file.folder == false"><span class="glyphicon glyphicon-file"></span> {{file.fileName}}</div>
+        <div style="cursor: pointer" *ngIf="file.folder == true" (dblclick)="openFolder(file.id, file.fileName)"><span
+          class="glyphicon glyphicon-folder-close"></span> {{file.fileName}}
+        </div>
+      </td>
+      <td>{{file.extension}}</td>
+      <td>
+        <div *ngIf="file.folder == false">{{file.size}} MB</div>
+        <div *ngIf="file.folder == true">{{file.size}}/{{file.maxSize}} MB</div>
+      </td>
+      <td>{{file.uploadDate}}</td>
+      <td>{{file.label}}</td>
+      <td>
+        <div *ngIf="file.id > 0" class="dropdown">
+          <button class="btn btn-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+            More
+          </button>
+          <div id="floatingButtonDropdown" class="dropdown-menu">
+            <a class="dropdown-item" *ngIf="file.extension == '.txt'" (click)="fetchEditTxtData(file.id)"
+               data-toggle="modal" data-target="#editTxtModal">Open TextFile</a>
+            <div *ngIf="file.extension == '.txt'" class="dropdown-divider"></div>
+            <a class="dropdown-item" (click)="download(file.id)">Download</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+
+    </tbody>
+
+  </table>
