--- a/src/angular/cooldrive/src/app/components/shared-with-me/shared-with-me.component.html
+++ b/src/angular/cooldrive/src/app/components/shared-with-me/shared-with-me.component.html
@@ -35,9 +35,9 @@
             More
           </button>
           <div id="floatingButtonDropdown" class="dropdown-menu">
-            <a class="dropdown-item" *ngIf="file.extension == '.txt'" (click)="fetchEditTxtData(file.id)"
+            <a class="dropdown-item" *ngIf="file.extension == '.txt' && file.readOnly==false" (click)="fetchEditTxtData(file.id)"
                data-toggle="modal" data-target="#editTxtModal">Open TextFile</a>
-            <div *ngIf="file.extension == '.txt'" class="dropdown-divider"></div>
+            <div *ngIf="file.extension == '.txt' && file.readOnly==false" class="dropdown-divider"></div>
             <a class="dropdown-item" (click)="download(file.id)">Download</a>
           </div>
         </div>
@@ -47,3 +47,27 @@
     </tbody>
 
   </table>
+
+  <!-- EDIT TEXT FILE MODAL -->
+  <div class="modal fade" id="editTxtModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">{{editTxtTitle}}</h4>
+        </div>
+        <div class="modal-body">
+          <div *ngIf="false" id="editTxtInfo" class="alert alert-success" role="alert">
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" id="editTextarea" rows="3" [(ngModel)]="editTxtContent"></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <input id="editTxtButton" type="button" class="btn btn-primary" (click)="editTxtFile()" value="Save">
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
