back button now not disappears on file modify in lower dirs

--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -104,7 +104,7 @@
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="listFiles(currentFolderId)">
+          <button id="fileModifyCloseButton" type="button" class="btn btn-secondary" data-dismiss="modal" (click)="listFiles(currentFolderId)">
             Close
           </button>
           <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="modifyFile()">Save changes
