--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -120,6 +120,9 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title" id="uploadModalButton">Upload</h4>
+          <button id="uploadClose" type="button" class="close" data-target="#uploadModal" data-dismiss="#uploadModal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
         <form>
           <div class="modal-body">
@@ -151,14 +154,14 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">Create folder</h4>
+          <button id="createFolderClose" type="button" class="close" data-dismiss="modal"></button>
         </div>
         <div class="modal-body">
           <div *ngIf="false" id="createFolderInfo" class="alert alert-success" role="alert">
           </div>
           <div class="input-group">
             <span class="input-group-addon createFolderModal">Folder name*</span>
-            <input type="text" class="form-control" aria-describedby="basic-addon1" (change)="enableCreateFolderBtn()"
-                   [(ngModel)]="newFolderName">
+            <input type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="newFolderName">
           </div>
           <div class="input-group">
             <span class="input-group-addon createFolderModal">Label</span>
@@ -166,8 +169,7 @@
           </div>
           <div class="input-group">
             <span class="input-group-addon createFolderModal">Max size*</span>
-            <input type="text" class="form-control" aria-describedby="basic-addon1" (change)="enableCreateFolderBtn()"
-                   [(ngModel)]="newFolderMaxSize">
+            <input type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="newFolderMaxSize">
           </div>
         </div>
         <div class="modal-footer">
@@ -184,6 +186,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">Create Text File</h4>
+          <button id="createTxtClose" type="button" class="close" data-dismiss="modal"></button>
         </div>
         <div class="modal-body">
           <div *ngIf="false" id="createTxtInfo" class="alert alert-success" role="alert">
@@ -213,6 +216,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">{{editTxtTitle}}</h4>
+          <button id="editTxtClose" type="button" class="close" data-dismiss="modal"></button>
         </div>
         <div class="modal-body">
           <div *ngIf="false" id="editTxtInfo" class="alert alert-success" role="alert">
@@ -235,6 +239,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">Share file</h4>
+          <button id="shareClose" type="button" class="close" data-dismiss="modal"></button>
         </div>
         <div class="modal-body">
           <div *ngIf="false" id="shareFileInfo" class="alert alert-success" role="alert">
