landing page, middle section was off position

--- a/src/angular/cooldrive/src/app/components/landing-page/landing-page.component.html
+++ b/src/angular/cooldrive/src/app/components/landing-page/landing-page.component.html
@@ -55,7 +55,7 @@
           </div>
           <div class="card">
             <div class="card-block">
-              <img class="card-img-top" src="https://pix-media.priceonomics-media.com/blog/329/freemium.jpg" alt="Card image cap">
+              <img class="card-img-top" style="margin-bottom: 80px" src="https://pix-media.priceonomics-media.com/blog/329/freemium.jpg" alt="Card image cap">
               <h4 class="card-title">Freemium</h4>
               <p class="card-text">It is free to use, but there are options to buy more storage</p>
             </div>
