--- a/src/angular/cooldrive/src/app/components/files/files.component.html
+++ b/src/angular/cooldrive/src/app/components/files/files.component.html
@@ -86,30 +86,32 @@
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Modify file details</h5>
         </div>
-        <div class="modal-body">
-          <div *ngIf="false" id="modifyInfo" class="alert alert-success" role="alert">
-            <strong>Well done!</strong> You successfully read this important alert message.
+        <form #fileModifyForm="ngForm">
+          <div class="modal-body">
+            <div *ngIf="false" id="modifyInfo" class="alert alert-success" role="alert">
+              <strong>Well done!</strong> You successfully read this important alert message.
+            </div>
+            <div class="input-group">
+              <span class="input-group-addon modifyModal" id="modifyName">FileName</span>
+              <input name="text" type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="selectedFile.fileName" required>
+            </div>
+            <div class="input-group">
+              <span class="input-group-addon modifyModal" id="modifyLabel">Label</span>
+              <input name="label" type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="selectedFile.label">
+            </div>
+            <div class="input-group" *ngIf="selectedFile.folder">
+              <span class="input-group-addon modifyModal" id="modifyMaxSize">Max size</span>
+              <input name="maxSize" type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="selectedFile.maxSize" required>
+            </div>
           </div>
-          <div class="input-group">
-            <span class="input-group-addon modifyModal" id="modifyName">FileName</span>
-            <input type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="selectedFile.fileName">
+          <div class="modal-footer">
+            <button id="fileModifyCloseButton" type="button" class="btn btn-secondary" data-dismiss="modal" (click)="listFiles(currentFolderId)">
+              Close
+            </button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" [disabled]="fileModifyForm.invalid" (click)="modifyFile()">Save changes
+            </button>
           </div>
-          <div class="input-group">
-            <span class="input-group-addon modifyModal" id="modifyLabel">Label</span>
-            <input type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="selectedFile.label">
-          </div>
-          <div class="input-group" *ngIf="selectedFile.folder">
-            <span class="input-group-addon modifyModal" id="modifyMaxSize">Max size</span>
-            <input type="text" class="form-control" aria-describedby="basic-addon1" [(ngModel)]="selectedFile.maxSize">
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button id="fileModifyCloseButton" type="button" class="btn btn-secondary" data-dismiss="modal" (click)="listFiles(currentFolderId)">
-            Close
-          </button>
-          <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="modifyFile()">Save changes
-          </button>
-        </div>
+        </form>
       </div>
     </div>
   </div>
