--- a/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
+++ b/src/angular/cooldrive/src/app/components/dashboard/dashboard.component.html
@@ -66,10 +66,10 @@
          <li class="nav-item">
           <a class="nav-link" routerLink="shared" routerLinkActive="active">Files shared with me</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="isUserAdmin">
           <a class="nav-link" routerLink="transactions" routerLinkActive="active">Transactions</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="isUserAdmin">
           <a class="nav-link" routerLink="users" routerLinkActive="active">Users</a>
         </li>
         <li class="nav-item">
