shareControll design done

--- a/src/angular/cooldrive/src/app/components/files/files.component.css
+++ b/src/angular/cooldrive/src/app/components/files/files.component.css
@@ -13,9 +13,25 @@
   left: auto;
   right: 0px;
 }
-
 .close{
   display: none;
+}
+.modal-content{
+  width: 700px !important;
+}
+
+.removeShare{
+  height: 15px;
+  margin-left: 20px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 2px;
+  padding-right: 2px;
+  font-size: x-small;
+}
+
+.removeShareIcon{
+  margin-left: 0px;
 }
 
 .custom-controls-stacked{
